# macroscope

data_plane/: .env.example  README.md  data_plane_struct.md  pyproject.toml
data_plane/src/data_plane/: __init__.py
data_plane/src/data_plane/config/: __init__.py  settings.py  thresholds.py  thresholds.yaml
data_plane/src/data_plane/events/: __init__.py  bus.py
data_plane/src/data_plane/ingestion/: __init__.py  poller.py  scheduler.py
data_plane/src/data_plane/models/: __init__.py  event.py  series.py
data_plane/src/data_plane/sources/: __init__.py  base.py  fred.py  gdelt.py
data_plane/src/data_plane/store/: __init__.py  base.py  memory.py  postgres.py  schema.sql
data_plane/src/data_plane/watchers/: __init__.py  base.py  composites.py  delta.py  engine.py  surprise.py  tone.py
data_plane/tests/: conftest.py
data_plane/tests/config/: test_thresholds.py
data_plane/tests/events/: test_bus.py
data_plane/tests/fixtures/: __init__.py  series.py
data_plane/tests/ingestion/: test_poller.py
data_plane/tests/models/: test_contracts.py
data_plane/tests/sources/: test_fred.py  test_gdelt.py  test_registry.py
data_plane/tests/store/: test_store_contract.py
data_plane/tests/watchers/: test_composites.py  test_delta.py  test_engine.py  test_surprise.py  test_tone.py
