[project]
name = "macro-watcher-data-plane"
version = "0.1.0"
description = "Data plane for the Macro Economic Watcher v1: ingestion, store, watchers, events."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",   # Postgres now; swappable behind store.base.Store
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
    "respx>=0.21",          # mock httpx for source tests
    "testcontainers[postgres]>=4.0",  # ephemeral Postgres for the store-contract test
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_plane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: touches a real database (deselect with -m 'not integration')",
]
